# simple-volume-changer

./: .gitignore  CMakeLists.txt  SimpleVolumeChanger.sln  readme.md  resource.rc
SimpleVolumeChanger/: CSettingDialog.cpp  CSettingDialog.h  EditBox.cpp  EditBox.h  ShortcutKey.cpp  ShortcutKey.h  SimpleVolumeChanger.aps  SimpleVolumeChanger.cpp  SimpleVolumeChanger.h  SimpleVolumeChanger.rc  SimpleVolumeChanger.vcxproj  SimpleVolumeChanger.vcxproj.filters  SimpleVolumeChangerDlg.cpp  SimpleVolumeChangerDlg.h  SoundControler.cpp  SoundControler.h  TaskTray.cpp  TaskTray.h  resource.h
SimpleVolumeChanger/res/: SimpleVolumeChanger.rc2
inc/: EditBox.h  ID.h  Slider.h  SoundControler.h  TaskTray.h
src/: EditBox.cpp  Slider.cpp  SoundControler.cpp  TaskTray.cpp  main.cpp
